--- a/Web.Statu/Views/Home/Detail.cshtml
+++ b/Web.Statu/Views/Home/Detail.cshtml
@@ -208,7 +208,7 @@
                                     </div>
                                 }
                             <div>
-                                @Util.DynamicModal("/api/v1/modalclassification/234234", " Jsou oblasti špatně? Dejte nám vědět, prosím.","btn btn-link")
+                                @Util.DynamicModal("/api/v1/modalclassification/"+Model.Id, " Jsou oblasti špatně? Dejte nám vědět, prosím.","btn btn-link")
                                 <br/>
                                 <span class="small">
                                     Zatřídění do oblastí dělá stroj a někdy se může splést. Každá vaše oprava našeho robota zpřesní. Díky.
