robot ignore updates

--- a/Web.Statu/Views/Home/Osoba.cshtml
+++ b/Web.Statu/Views/Home/Osoba.cshtml
@@ -39,7 +39,7 @@
 
     @if (HlidacStatu.Web.Controllers.HomeController.DontIndexOsoby.Contains(Model.NameId.ToLower()))
     {
-        <meta name="robots" content="noindex, nofollow">
+        <meta name="robots" content="noindex, noarchive">
     }
 }
 
