--- a/Web.Statu/App_Code/Util.cshtml
+++ b/Web.Statu/App_Code/Util.cshtml
@@ -85,6 +85,12 @@
 
 }
 
+@helper GAClick(string btnName)
+{
+@Html.Raw($" onclick=\"ga('send', 'event', 'logoffBtn', 'click','{Util.CurrPageUrlPath}')\" ");
+}
+
+
 @helper HideFundingInFooter()
 {
     string s = @"
