--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
             <ul>
                 <li class=""><a href="/data">Další databáze<sup style="top:0;text-decoration:none;color:yellow;">@(HlidacStatu.Lib.Data.External.DataSets.DataSetDB.AllDataSets.Get()?.Count().ToString() ?? "")</sup></a></li>
                 <li class=""><a href="/reporty">Analýzy a reporty<sup style="top:0;text-decoration:none;color:yellow;">@(PocetReportu)</sup></a></li>
-                <li class=""><a href="/texty">Komentáře</a></li>
+                <li class=""><a @Util.GAClick("ZjistiliJsme") style="font-weight:bold;color:yellow;" href="/texty">Zjistili jsme</a></li>
                 <li class=""><a href="https://www.hlidacstatu.cz/texty/series/tipy/">Tipy „Jak používat Hlídače“</a></li>
             </ul>
             <ul>
